--- a/src/components/Layouts/Layout.module.css
+++ b/src/components/Layouts/Layout.module.css
@@ -14,8 +14,24 @@
     align-items: center;
     margin-bottom: 32px;
     cursor: pointer;
-    font-size: 23px;
+    font-size: 25px;
     color: var(--text-color-secondary);
+}
+.switcher{
+    width: 100%;
+    transform: scale(1.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    filter: drop-shadow( 
+        3px 3px 2px rgba(189, 189, 189, 0.3)
+    );
+    margin-top: 2rem;
+}
+.switcher:hover{
+    filter: drop-shadow(
+        3px 3px 2px rgba(182, 182, 182, 0.5)
+     );
 }
 .footer{
     margin-top: 32px;
