--- a/src/components/Layouts/Layout.module.css
+++ b/src/components/Layouts/Layout.module.css
@@ -13,8 +13,16 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 32px;
+}
+.title {
+    background: rgba(255, 255, 255, 0.11);
+    box-shadow: 0 8px 32px 0 #571b9888;
+    border-radius: 25px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    padding: 10px;
     cursor: pointer;
     font-size: 25px;
+    font-weight: 700;
     color: var(--text-color-secondary);
 }
 .switcher{
@@ -69,7 +77,7 @@
     height: 9px;
     background-color: #000;
     border-radius: 50%;
-    top: 3px;
+    top: 2px;
     left: 4px;
 }
 
